Update volume paths in Docker Compose configurations for multiple services

--- a/stacks/affine/compose.yaml
+++ b/stacks/affine/compose.yaml
@@ -11,8 +11,8 @@ services:
       postgres:
         condition: service_healthy
     volumes:
-      - /srv/containers/affine/storage:/root/.affine/storage
-      - /srv/containers/affine/config:/root/.affine/config
+      - /srv/data/containers/affine/storage:/root/.affine/storage
+      - /srv/data/containers/affine/config:/root/.affine/config
     secrets:
       - db_password
     command: |
@@ -45,7 +45,7 @@ services:
     pull_policy: always
     container_name: affine_redis
     volumes:
-      - affine_redis_data:/data
+      - /srv/data/containers/affine/redis/data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 10s
@@ -61,7 +61,7 @@ services:
     pull_policy: always
     container_name: affine_postgres
     volumes:
-      - affine_postgres_data:/var/lib/postgresql/data
+      - /srv/data/containers/affine/postgres/data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: affine_user
       POSTGRES_PASSWORD_FILE: /run/secrets/db_password
@@ -75,15 +75,6 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
-
-#--------------------------------------------------------------------------
-# Volumes - for persistent data
-#--------------------------------------------------------------------------
-volumes:
-  affine_redis_data:
-    name: affine_redis_data
-  affine_postgres_data:
-    name: affine_postgres_data
 
 #--------------------------------------------------------------------------
 # Secrets - for sensitive data
